--- a/dev/records/index.html
+++ b/dev/records/index.html
@@ -6,7 +6,7 @@
   <style>body { padding: 0; margin: 0; }</style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto+Slab&display=swap" rel="stylesheet">
-  <script src="app.js"></script>
+  <script src="/app.js"></script>
 </head>
 
 <body>
@@ -15,11 +15,10 @@
 <script>
   const detectLanguage = () =>
   {
-    return "fr";
-    //return navigator.language.split("-")[0];
+    return navigator.language.split("-")[0];
   }
 
-  var app = Elm.Main.init({
+  var app = Elm.RecordsApp.init({
     node: document.getElementById('elm'),
     flags: {
       locale: detectLanguage()
