--- a/dev/records/index.html
+++ b/dev/records/index.html
@@ -6,7 +6,7 @@
   <style>body { padding: 0; margin: 0; }</style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto+Slab&display=swap" rel="stylesheet">
-  <script src="/app.js"></script>
+  <script src="../static/records/app.js"></script>
 </head>
 
 <body>
