WIP: Search app UI improvements
Broken at the moment...

--- a/dev/search/index.html
+++ b/dev/search/index.html
@@ -21,7 +21,9 @@
   var app = Elm.SearchApp.init({
     node: document.getElementById('elm'),
     flags: {
-      locale: detectLanguage()
+      locale: detectLanguage(),
+      windowWidth: window.innerWidth,
+      windowHeight: window.innerHeight
     }
   });
 </script>
